Fixed runtime issue and upped coverage to 84.1%

--- a/search/src/main/resources/application.properties
+++ b/search/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 server.port = 8088
+
+spring.data.mongodb.uri=mongodb://127.0.0.1:27017/Incidents
+
+
+spring.main.allow-bean-definition-overriding=true
