--- a/search/src/main/resources/application.properties
+++ b/search/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-server.port = 8088
+server.port = 8082
 
-spring.data.mongodb.uri=mongodb://127.0.0.1:27017/Incidents
+spring.data.mongodb.uri=mongodb://127.0.0.1:27017/beholder
 
 
 spring.main.allow-bean-definition-overriding=true
