made new gitignore

--- a/search/src/main/resources/application.properties
+++ b/search/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port = 8082
 
-spring.data.mongodb.uri=mongodb://localhost:27017/beholder
+spring.data.mongodb.uri=mongodb://@localhost:27017/beholder
 
 
 spring.main.allow-bean-definition-overriding=true
